pamc/src/tests/sample_code/should_fail/type_check/wrong_number_of_case_params/expected_2_actually_1.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

type Eq(T: Type, a: T, b: T) {
    .Refl(T: Type, t: T): Eq(T, t, t),
}

let foo = match Eq.Refl(Nat, Nat.O) {
    .Refl(O) => O,
};
